# SalvoWebsite-Template

./: .cursorrules  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  buildarm.sh  cliff.toml  config.toml  docker-compose.yml  init-cron.sql  release.sh
.cargo/: config.toml
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.svelte  session.svelte.ts
frontend/src/bindings/: UserInfo.ts
frontend/src/components/: Counter.svelte
frontend/src/routes/: [...notfound].svelte  index.svelte
migrations/: 20231001143156_users.sql  20260630174635_sessions.sql
src/: lib.rs  main.rs
src/config/: db.rs  log.rs  mod.rs  tls.rs
src/core/: database.rs  error.rs  mod.rs  utils.rs
src/db/: mod.rs  sessions.rs  users.rs
src/features/: mod.rs
src/features/auth/: db.rs  handlers.rs  middleware.rs  mod.rs
src/features/homepage/: handlers.rs
src/features/misc/: error_handler.rs  mod.rs
src/features/users/: db.rs  handlers.rs  mod.rs
src/hoops/: auth.rs  mod.rs
src/routers/: demo.rs  login.rs  mod.rs  user.rs
src/utils/: mod.rs
templates/: user_list_page.html
views/: login.html
