[package]
name = "example_website"
version = "0.1.1"
edition = "2024"
rust-version = "1.96"
readme = "./README.md"

[dependencies]
anyhow = "1.0.103"
figment = { version = "0.10.19", features = ["env", "toml"] }
rust-embed = "8.11.0"
salvo = { version = "0.93.0", features = ["anyhow", "cookie", "cors", "oapi", "serve-static", "rustls", "logging", "test", "quinn"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
time = "0.3.51"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
validator = { version = "0.20.0", features = ["derive"] }
argon2 = "0.5.3"
cookie = "0.18.1"
dotenvy = "0.15.7"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = [
    "std",
    "fmt",
    "env-filter",
    "tracing-log",
    "time",
    "local-time",
    "json",
] }
sqlx = { version = "0.9.0", features = [
    "runtime-tokio",
    "macros",
    "postgres",
    "time",
] }
askama = "0.16.0"
rustls = { version = "0.23", features = ["ring"] }
rand = "0.10.2"
toml = "1.1.2"
sha2 = "0.11.0"
hex = "0.4.3"
ts-rs = "12.0.1"


[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
strip = true
